# trilium-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  trilium-note
src/trilium_cli/: cli.py
