[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trilium-cli"
version = "0.1.0"
description = "Small stdlib-only CLI for editing TriliumNext notes via the ETAPI, with drift detection, auto-snapshots, and a workaround for the text/html → [object Object] clobber bug."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "io7", email = "christian@io7.net" }]
requires-python = ">=3.10"
keywords = ["trilium", "triliumnext", "etapi", "notes", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/io7/trilium-cli"
Repository = "https://github.com/io7/trilium-cli"
Issues = "https://github.com/io7/trilium-cli/issues"

[project.scripts]
trilium-note = "trilium_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trilium_cli"]
